--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HyPrism</title>
     <meta name="description" content="HyPrism - Free, open-source Hytale launcher">
-    <meta name="theme-color" content="#FFA845">
+    <meta name="theme-color" content="#207e5c">
     <link rel="icon" type="image/png" href="assets/favicon.png">
     <link rel="stylesheet" href="style.css">
 </head>
