--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>HyPrism</title>
     <meta name="description" content="HyPrism - Free, open-source Hytale launcher">
     <meta name="theme-color" content="#207e5c">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
+    <link rel="icon" type="image/svg" href="assets/hyprism-logo.svg">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
