--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <span class="animate-ping absolute inline-flex h-full w-full rounded-full bg-green-400 opacity-75"></span>
                     <span class="relative inline-flex rounded-full h-2 w-2 bg-green-500"></span>
                 </span>
-                Version 1.0.27 Available
+                Version 1.0.28 Available
             </div>
             
 <h1 class="text-5xl md:text-8xl font-extrabold text-white mb-8 tracking-tight leading-[0.9]" data-aos="zoom-out-up">
@@ -175,7 +175,7 @@
                     </div>
                     <h3 class="text-2xl font-bold text-white mb-3">Windows</h3>
                     <p class="text-gray-500 text-sm mb-8 leading-relaxed">Optimized for Windows 10 and 11 with DirectX 12 support.</p>
-                    <a id="download-windows" href="#" class="btn-hytale w-full py-4 rounded-xl font-bold text-white text-xs uppercase tracking-widest">Download .EXE</a>
+                    <a id="download-windows" href="https://github.com/yyyumeniku/HyPrism/releases/download/v1.0.28/HyPrism.exe" class="btn-hytale w-full py-4 rounded-xl font-bold text-white text-xs uppercase tracking-widest">Download .EXE</a>
                 </div>
 
                 <div class="hytale-card p-10 flex flex-col items-center text-center group" data-aos="fade-up" data-aos-delay="200">
@@ -184,7 +184,7 @@
                     </div>
                     <h3 class="text-2xl font-bold text-white mb-3">macOS</h3>
                     <p class="text-gray-500 text-sm mb-8 leading-relaxed">Maximum performance on Apple Silicon M1, M2, and M3 chips.</p>
-                    <a id="download-macos" href="#" class="btn-hytale w-full py-4 rounded-xl font-bold text-white text-xs uppercase tracking-widest">Download .DMG</a>
+                    <a id="download-macos" href="https://github.com/yyyumeniku/HyPrism/releases/download/v1.0.28/HyPrism-macOS-arm64.dmg" class="btn-hytale w-full py-4 rounded-xl font-bold text-white text-xs uppercase tracking-widest">Download .DMG</a>
                 </div>
 
                 <div class="hytale-card p-10 flex flex-col items-center text-center group" data-aos="fade-up" data-aos-delay="300">
@@ -193,7 +193,7 @@
                     </div>
                     <h3 class="text-2xl font-bold text-white mb-3">Linux</h3>
                     <p class="text-gray-500 text-sm mb-8 leading-relaxed">Universal AppImage compatible with Ubuntu, Fedora, and Arch Linux.</p>
-                    <a id="download-linux" href="#" class="btn-hytale w-full py-4 rounded-xl font-bold text-white text-xs uppercase tracking-widest">Download .AppImage</a>
+                    <a id="download-linux" href="https://github.com/yyyumeniku/HyPrism/releases/download/v1.0.28/HyPrism-x86_64.AppImage" class="btn-hytale w-full py-4 rounded-xl font-bold text-white text-xs uppercase tracking-widest">Download .AppImage</a>
                 </div>
             </div>
         </div>
