--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <meta property="og:url" content="https://hyprism.vercel.app">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#7b8cff">
+    <link rel="preconnect" href="https://avatars.githubusercontent.com">
+    <link rel="preconnect" href="https://api.github.com">
     <link rel="icon" href="assets/images/icon.png" type="image/png">
     <link rel="apple-touch-icon" href="assets/images/icon.png">
     <link rel="stylesheet" href="css/style.css">
@@ -61,17 +63,6 @@
                 hyprism is a free and open source third party launcher for hytale, the game by hypixel studios. we are not affiliated with them. just fans who wanted something better.
             </p>
 
-            <div class="hero__actions">
-                <a href="#downloads" class="btn btn--primary">
-                    <svg width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4M7 10l5 5 5-5M12 15V3"/></svg>
-                    Download
-                </a>
-                <a href="https://github.com/HyPrismTeam/HyPrism" target="_blank" rel="noopener" class="btn btn--glass">
-                    <svg width="18" height="18" fill="currentColor" viewBox="0 0 24 24"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.43.372.823 1.102.823 2.222 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
-                    GitHub
-                </a>
-            </div>
-
             <div class="hero__stats">
                 <span class="hero__stats-line"></span>
                 <span class="hero__stats-text">
@@ -79,6 +70,8 @@
                 </span>
                 <span class="hero__stats-line"></span>
             </div>
+        </div>
+    </section>
         </div>
     </section>
 
@@ -150,51 +143,51 @@
 
             <div class="contributors__grid">
                 <a href="https://github.com/freakdaniel" target="_blank" rel="noopener" class="contributor">
-                    <img src="https://avatars.githubusercontent.com/freakdaniel?size=128" alt="freakdaniel" class="contributor__avatar" loading="lazy" referrerpolicy="no-referrer">
+                    <img src="https://avatars.githubusercontent.com/freakdaniel?size=128" alt="freakdaniel" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
                     <span class="contributor__name">freakdaniel</span>
                 </a>
                 <a href="https://github.com/XargonWan" target="_blank" rel="noopener" class="contributor">
-                    <img src="https://avatars.githubusercontent.com/XargonWan?size=128" alt="XargonWan" class="contributor__avatar" loading="lazy" referrerpolicy="no-referrer">
+                    <img src="https://avatars.githubusercontent.com/XargonWan?size=128" alt="XargonWan" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
                     <span class="contributor__name">XargonWan</span>
                 </a>
                 <a href="https://github.com/yyyumeniku" target="_blank" rel="noopener" class="contributor contributor--lead">
-                    <img src="https://avatars.githubusercontent.com/yyyumeniku?size=128" alt="yyyumeniku" class="contributor__avatar" loading="lazy" referrerpolicy="no-referrer">
+                    <img src="https://avatars.githubusercontent.com/yyyumeniku?size=128" alt="yyyumeniku" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
                     <span class="contributor__name">yyyumeniku</span>
                 </a>
                 <a href="https://github.com/YurCop" target="_blank" rel="noopener" class="contributor">
-                    <img src="https://avatars.githubusercontent.com/YurCop?size=128" alt="YurCop" class="contributor__avatar" loading="lazy" referrerpolicy="no-referrer">
+                    <img src="https://avatars.githubusercontent.com/YurCop?size=128" alt="YurCop" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
                     <span class="contributor__name">YurCop</span>
                 </a>
                 <a href="https://github.com/aarav2709" target="_blank" rel="noopener" class="contributor">
-                    <img src="https://avatars.githubusercontent.com/aarav2709?size=128" alt="aarav2709" class="contributor__avatar" loading="lazy" referrerpolicy="no-referrer">
+                    <img src="https://avatars.githubusercontent.com/aarav2709?size=128" alt="aarav2709" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
                     <span class="contributor__name">aarav2709</span>
                 </a>
                 <a href="https://github.com/fosterushka" target="_blank" rel="noopener" class="contributor">
-                    <img src="https://avatars.githubusercontent.com/fosterushka?size=128" alt="fosterushka" class="contributor__avatar" loading="lazy" referrerpolicy="no-referrer">
+                    <img src="https://avatars.githubusercontent.com/fosterushka?size=128" alt="fosterushka" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
                     <span class="contributor__name">fosterushka</span>
                 </a>
                 <a href="https://github.com/CupRusk" target="_blank" rel="noopener" class="contributor">
-                    <img src="https://avatars.githubusercontent.com/CupRusk?size=128" alt="CupRusk" class="contributor__avatar" loading="lazy" referrerpolicy="no-referrer">
+                    <img src="https://avatars.githubusercontent.com/CupRusk?size=128" alt="CupRusk" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
                     <span class="contributor__name">CupRusk</span>
                 </a>
                 <a href="https://github.com/RainyPixel" target="_blank" rel="noopener" class="contributor">
-                    <img src="https://avatars.githubusercontent.com/RainyPixel?size=128" alt="RainyPixel" class="contributor__avatar" loading="lazy" referrerpolicy="no-referrer">
+                    <img src="https://avatars.githubusercontent.com/RainyPixel?size=128" alt="RainyPixel" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
                     <span class="contributor__name">RainyPixel</span>
                 </a>
                 <a href="https://github.com/DoodMann" target="_blank" rel="noopener" class="contributor">
-                    <img src="https://avatars.githubusercontent.com/DoodMann?size=128" alt="DoodMann" class="contributor__avatar" loading="lazy" referrerpolicy="no-referrer">
+                    <img src="https://avatars.githubusercontent.com/DoodMann?size=128" alt="DoodMann" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
                     <span class="contributor__name">DoodMann</span>
                 </a>
                 <a href="https://github.com/Zephyris-Pro" target="_blank" rel="noopener" class="contributor">
-                    <img src="https://avatars.githubusercontent.com/Zephyris-Pro?size=128" alt="Zephyris-Pro" class="contributor__avatar" loading="lazy" referrerpolicy="no-referrer">
+                    <img src="https://avatars.githubusercontent.com/Zephyris-Pro?size=128" alt="Zephyris-Pro" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
                     <span class="contributor__name">Zephyris-Pro</span>
                 </a>
                 <a href="https://github.com/FowlBytez" target="_blank" rel="noopener" class="contributor">
-                    <img src="https://avatars.githubusercontent.com/FowlBytez?size=128" alt="FowlBytez" class="contributor__avatar" loading="lazy" referrerpolicy="no-referrer">
+                    <img src="https://avatars.githubusercontent.com/FowlBytez?size=128" alt="FowlBytez" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
                     <span class="contributor__name">FowlBytez</span>
                 </a>
                 <a href="https://github.com/denuvoless" target="_blank" rel="noopener" class="contributor">
-                    <img src="https://avatars.githubusercontent.com/denuvoless?size=128" alt="denuvoless" class="contributor__avatar" loading="lazy" referrerpolicy="no-referrer">
+                    <img src="https://avatars.githubusercontent.com/denuvoless?size=128" alt="denuvoless" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
                     <span class="contributor__name">denuvoless</span>
                 </a>
             </div>
@@ -229,6 +222,6 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="js/script.js" defer></script>
 </body>
 </html>
