Update download links for Windows, macOS, and Linux

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                     <h3 class="card__title">windows</h3>
                     <p class="card__desc">optimized for windows 10 and 11 with directx 12 support. works out of the box.</p>
-                    <a id="download-windows" href="#" class="btn btn--primary btn--block">download .exe</a>
+                    <a id="download-windows" href="https://github.com/HyPrismTeam/HyPrism/releases/download/v3.0.1/HyPrism-win-x64-3.0.1.exe" class="btn btn--primary btn--block">download .exe</a>
                 </div>
 
                 <!-- macos card -->
@@ -104,7 +104,7 @@
                     </div>
                     <h3 class="card__title">macos</h3>
                     <p class="card__desc">runs great on apple silicon. tested on m1, m2, m3, and m4 chips.</p>
-                    <a id="download-macos" href="#" class="btn btn--primary btn--block">download .dmg</a>
+                    <a id="download-macos" href="https://github.com/HyPrismTeam/HyPrism/releases/download/v3.0.1/HyPrism-mac-arm64-3.0.1.dmg" class="btn btn--primary btn--block">download .dmg</a>
                 </div>
 
                 <!-- linux card -->
@@ -114,7 +114,7 @@
                     </div>
                     <h3 class="card__title">linux</h3>
                     <p class="card__desc">universal appimage that works on ubuntu, fedora, arch, and most other distros.</p>
-                    <a id="download-linux" href="#" class="btn btn--primary btn--block">download .appimage</a>
+                    <a id="download-linux" href="https://github.com/HyPrismTeam/HyPrism/releases/download/v3.0.1/HyPrism-linux-x86_64-3.0.1.AppImage" class="btn btn--primary btn--block">download .appimage</a>
                 </div>
             </div>
         </div>
