Update contributor information in index.html
Replaced contributor 'YurCop' with 'eoYuzi' in the contributors section.

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                     <img src="https://avatars.githubusercontent.com/yyyumeniku?size=128" alt="yyyumeniku" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
                     <span class="contributor__name">yyyumeniku</span>
                 </a>
-                <a href="https://github.com/YurCop" target="_blank" rel="noopener" class="contributor">
-                    <img src="https://avatars.githubusercontent.com/YurCop?size=128" alt="YurCop" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
-                    <span class="contributor__name">YurCop</span>
+                <a href="https://github.com/eoYuzi" target="_blank" rel="noopener" class="contributor">
+                    <img src="https://avatars.githubusercontent.com/eoYuzi?size=128" alt="eoYuzi" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
+                    <span class="contributor__name">eoYuzi</span>
                 </a>
                 <a href="https://github.com/aarav2709" target="_blank" rel="noopener" class="contributor">
                     <img src="https://avatars.githubusercontent.com/aarav2709?size=128" alt="aarav2709" class="contributor__avatar" loading="lazy" decoding="async" width="64" height="64">
